--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SignIn">
+    tools:context=".ui.authorization.activity.SignInActivity">
     <FrameLayout
         android:id="@+id/fragment_container_sign_in"
         android:layout_width="match_parent"
