--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SplashScreen"
+    tools:context=".ui.splash.SplashScreenActivity"
     android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="wrap_content"
