--- a/app/src/main/res/layout/fragment_sign_up_by_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_email.xml
@@ -27,7 +27,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_margin="10dp"
-            android:background="@drawable/circle_button" />
+            android:background="@drawable/button_circle" />
     </RelativeLayout>
 
     <LinearLayout
