--- a/app/src/main/res/drawable/circle_red.xml
+++ b/app/src/main/res/drawable/circle_red.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size
-        android:width="150dp"
-        android:height="150dp" />
-    <solid android:color="@android:color/holo_red_dark"></solid>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <size android:width="100dp"
+                android:height="100dp"/>
+            <solid android:color="#c1c1c1" />
+        </shape>
+    </item>
 
-</shape>
+    <item
+        android:bottom="1dp"
+        android:left="0dp"
+        android:right="1dp"
+        android:top="0dp">
+
+        <shape android:shape="oval">
+            <solid android:color="#FFFFFF" />
+
+        </shape>
+    </item>
+
+
+</layer-list>
