--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:padding="10dp"
     >
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/header_avatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
