--- a/app/src/main/res/layout/fragment_edit_contact.xml
+++ b/app/src/main/res/layout/fragment_edit_contact.xml
@@ -207,7 +207,7 @@
                     android:inputType="text" />
 
                 <LinearLayout
-                    android:id="@+id/edit_contact_position_container"
+                    android:id="@+id/edit_contact_experience_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -260,12 +260,22 @@
                             android:text="@string/senior"
                             android:textColor="@color/primaryText"
                             android:textSize="17sp" />
+                        <TextView
+                            android:id="@+id/edit_contact_tech_lead_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_weight="1"
+                            android:gravity="center_horizontal"
+                            android:text="TechLead"
+                            android:textColor="@color/primaryText"
+                            android:textSize="17sp" />
 
 
                     </LinearLayout>
 
                     <RadioGroup
-                        android:id="@+id/edit_contact_position_group"
+                        android:id="@+id/edit_contact_experience_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -281,33 +291,31 @@
                             android:id="@+id/edit_contact_junior_r_btn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginLeft="15dp"
                             android:layout_weight="1" />
 
                         <RadioButton
                             android:id="@+id/edit_contact_middle_r_btn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="22dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_weight="1" />
 
                         <RadioButton
                             android:id="@+id/edit_contact_senior_r_btn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="22dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_weight="1" />
+                        <RadioButton
+                            android:id="@+id/edit_contact_tech_lead_r_btn"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
                             android:layout_weight="1" />
 
                     </RadioGroup>
                 </LinearLayout>
-
-                <EditText
-                    android:id="@+id/edit_contact_experience"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/icon_experience"
-                    android:hint="@string/experience"
-                    android:inputType="text" />
 
                 <EditText
                     android:id="@+id/edit_contact_job_or_university"
@@ -379,13 +387,6 @@
                         android:textColor="@color/secondaryText"
                         android:textSize="18sp" />
 
-                    <EditText
-                        android:id="@+id/edit_contact_language"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:drawableLeft="@drawable/icon_language"
-                        android:inputType="text" />
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/edit_contact_language_container"
                         android:layout_width="match_parent"
@@ -415,14 +416,10 @@
                         android:text="Скіли:"
                         android:textColor="@color/secondaryText"
                         android:textSize="18sp" />
-
-                    <EditText
-                        android:id="@+id/edit_contact_skill"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/edit_contact_skills_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:drawableLeft="@drawable/icon_skill"
-                        android:inputType="text" />
+                        android:layout_height="wrap_content"/>
 
                     <ImageButton
                         android:id="@+id/edit_contact_add_skill"
