--- a/app/src/main/res/layout/item_language.xml
+++ b/app/src/main/res/layout/item_language.xml
@@ -7,10 +7,16 @@
         android:id="@+id/item_language_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/icon_language"
         android:inputType="text"
         android:layout_weight="1"/>
+    <Spinner
+        android:id="@+id/item_language_level"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        />
     <ImageButton
         android:id="@+id/item_language_btn"
         android:layout_width="45dp"
