--- a/app/src/main/res/layout/item_skill.xml
+++ b/app/src/main/res/layout/item_skill.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/item_skill_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
