--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -17,6 +17,10 @@
         android:icon="@drawable/icon_import"
         android:title="@string/import_contacts_from_linkedin" />
     <item
+        android:id="@+id/navigation_drawer_expanded_search"
+        android:icon="@drawable/icon_search"
+        android:title="Розширений пошук" />
+    <item
         android:id="@+id/navigation_drawer_selected_contacts"
         android:icon="@drawable/icon_star"
         android:title="@string/selected_contacts" />
