--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,18 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
-        <ImageView
-            android:id="@+id/splash_logo"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal"/>
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+    <ImageView
+        android:id="@+id/splash_logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center_horizontal"/>
+
         <TextView
             android:id="@+id/splash_text"
             android:layout_width="wrap_content"
@@ -24,8 +26,10 @@
             android:textColor="@color/colorAccent"
             android:textSize="32sp"
             android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"/>
     </LinearLayout>
+
 
 
 
